<resources>
    <string name="app_name">LoginProject</string>
    <string name="welcome">Welcome!</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="logged_in">Logged in:</string>
    <string name="user">User:</string>
    <string name="option1">Option1</string>
    <string name="option2">Option2</string>
    <string name="sub1">sub1</string>
    <string name="sub2">sub2</string>
    <string name="option3">Option3</string>
</resources>