<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image"
        android:layout_width="239dp"
        android:layout_height="80dp"
        android:src="@drawable/logo_cin" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/red_dark" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="10dp"
        android:minWidth="250dp"
        android:hint="@string/email"
        android:textColorHint="@color/red_dark"
        android:backgroundTint="@color/red_dark"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:minWidth="250dp"
        android:autofillHints="emailAddress"
        android:hint="@string/password"
        android:textColorHint="@color/red_dark"
        android:backgroundTint="@color/red_dark"/>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:minWidth="250dp"
        android:textSize="18sp"
        android:text="@string/login"
        android:backgroundTint="@color/red_dark"
        android:textColor="@color/white"/>

</LinearLayout>
