<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:src="@drawable/logo_cin" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/red_dark" />

    <TextView
        android:id="@+id/userTxt"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/user"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/loggedIn"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/logged_in"
        android:textSize="20sp" />



</LinearLayout>
